Fixed incorrect locale generation